fixed spacing

--- a/style.css
+++ b/style.css
@@ -28,12 +28,20 @@ body {
     font-size: 1.5em;
     font-weight: 500;
     display: inline-block;
+    margin: 0;
+}
+.person > p {
+    margin: 0;
+}
+.text > p {
+    margin: 0;
 }
 .person {
     color: grey;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem;
     font-weight: 100;
+    margin: 0;
 }
 .git {
     color: black;
@@ -44,6 +52,7 @@ body {
 .space {
     display: inline-block;
     padding-left: 1rem;
+    margin: 0;
 }
 .button-row {
     width: 100%;
